<resources>
    <string name="app_name">NHcartoon</string>

    <string name="menu_home">首页</string>
    <string name="menu_love">收藏</string>
    <string name="menu_download">下载</string>
    <string name="menu_history">历史</string>
    <string name="menu_setting">设置</string>

    <string name="favorite">收藏</string>
    <string name="download">下载</string>
    <string name="downloaded">已下载</string>
    <string name="downloading">正在下载</string>
</resources>
